# extlog

./: .travis.yml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.cargo/: config  config.toml
.github/workflows/: rust.yml
benches/: stats.rs
slog-extlog-derive/: Cargo.toml
slog-extlog-derive/src/: lib.rs
slog-extlog-derive/tests/: loggable.rs
src/: lib.rs  slog_test.rs  stats.rs
tests/: demo_test.rs  stats_extlog.rs  stats_query.rs
