[package]
authors = ["Metaswitch Networks Ltd"]
name = "slog-extlog"
version = "5.2.1"
license = "Apache-2.0"
description = "Object-based logging and statistics tracking through logs"
homepage = "https://github.com/slog-rs/extlog"
repository = "https://github.com/slog-rs/extlog"
keywords = ["slog", "log", "logging"]
readme = "README.md"
edition = "2018"

[[bench]]
harness = false
name = "stats"

[dependencies]
erased-serde = "0.3"
futures = "0.1"
iobuffer= "0.1"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1"
tokio-core = "0.1"
tokio-timer = "0.1"

[dependencies.slog]
features = ["nested-values"]
version = "2.4"

[dependencies.slog-json]
features = ["nested-values"]
version = "2.1"

[dev-dependencies]
bencher = "0.1.5"

# Cargo doesn't let you publish crates with circular dev dependencies,
# so in order to publish new versions you'll need to temporarily comment out
# this dependency in your local codebase and publish the crate using the
# --allow-dirty flag.
#
# This is a known problem in Cargo - see
# https://github.com/rust-lang/cargo/issues/4242 for tracking issue.
[dev-dependencies.slog-extlog-derive]
version = "5"
path = "slog-extlog-derive"

[workspace]
members = ["slog-extlog-derive"]
