[package]
authors = ["Metaswitch Networks Ltd"]
name = "slog-extlog"
version = "6.0.1"
license = "Apache-2.0"
description = "Object-based logging and statistics tracking through logs"
homepage = "https://github.com/slog-rs/extlog"
repository = "https://github.com/slog-rs/extlog"
keywords = ["slog", "log", "logging"]
readme = "README.md"
edition = "2018"

[[bench]]
harness = false
name = "stats"

[dependencies]
iobuffer = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time"] }

# The version here is pinned hard to the same version as this crate
# this is to allow the derive <-> extlog crate APIs to stay perfectly in sync,
# allowing breaking changes that only affect each other to be elided
[dependencies.slog-extlog-derive]
version = "=6.0.1"
path = "slog-extlog-derive"

[dependencies.slog]
features = ["nested-values"]
version = "2.4"

[dependencies.slog-json]
features = ["nested-values"]
version = "2.1"

[dev-dependencies]
bencher = "0.1.5"
erased-serde = "0.3"
tokio = { version = "1", features = [ "macros" ] }

[workspace]
members = ["slog-extlog-derive"]
