[package]
authors = ["Metaswitch Networks Ltd"]
name = "slog-extlog"
version = "8.0.0"
license = "Apache-2.0"
description = "Object-based logging and statistics tracking through logs"
homepage = "https://github.com/slog-rs/extlog"
repository = "https://github.com/slog-rs/extlog"
keywords = ["slog", "log", "logging"]
readme = "README.md"
edition = "2018"

[[bench]]
harness = false
name = "stats"

[dependencies]
iobuffer = "0.2"
serde = { version = "1.0", features = ["derive"] }
erased-serde = "0.3"
serde_json = "1.0"
slog = { version = "2.4", features = [ "nested-values" ] }
slog-json = { version = "2.1", features = [ "nested-values" ] }

# Used by the interval_logging feature
tokio = { version = "1", features = [ "rt", "time" ], optional = true }

# The version here is pinned hard to the same version as this crate
# this is to allow the derive <-> extlog crate APIs to stay perfectly in sync,
# allowing breaking changes that only affect the interface between these crates
# to be elided downstream
slog-extlog-derive = { version = "=8.0.0", path = "slog-extlog-derive", optional = true }

[dev-dependencies]
bencher = "0.1.5"
tokio = { version = "1", features = [ "macros", "rt-multi-thread", "time" ] }
slog-extlog-derive = { version = "=8.0.0", path = "slog-extlog-derive" }

[features]
interval_logging = [ "tokio" ]
derive = [ "slog-extlog-derive" ]

[workspace]
members = [ "slog-extlog-derive" ]
