[package]
name = "slog-extlog-derive"
version = "6.0.1"
authors = ["Metaswitch Networks Ltd"]
license = "Apache-2.0"
description = "Custom derive code for slog-extlog"
homepage = "https://github.com/slog-rs/extlog"
repository = "https://github.com/slog-rs/extlog"
keywords = ["slog", "log", "logging"]
readme = "../README.md"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.19"
slog = { version = "2.4", features = ['nested-values'] }
syn = { version = "1.0.36", features = ["full"] }
quote = "1.0.7"

[lib]
proc-macro = true

[dev-dependencies]
erased-serde = "0.3"
iobuffer = "0.2"
serde =  { version = "1.0", features = ["derive"] }
slog-extlog = { version = "6", path = ".." }
