[package]
name = "slog-extlog-derive"
version = "8.1.0"
authors = ["Metaswitch Networks Ltd"]
license = "Apache-2.0"
description = "Custom derive code for slog-extlog"
homepage = "https://github.com/slog-rs/extlog"
repository = "https://github.com/slog-rs/extlog"
keywords = ["slog", "log", "logging"]
readme = "../README.md"
edition = "2018"

[dependencies]
proc-macro2 = "1.0.68"
slog = { version = "2.7", features = ['nested-values'] }
syn = { version = "2.0.38", features = ["full", "extra-traits"] }
quote = "1.0.33"

[lib]
proc-macro = true

[dev-dependencies]
iobuffer = "0.2"
serde =  { version = "1.0", features = ["derive"] }
slog-extlog = { path = ".." }
tokio = { version = "1.32", features = ["macros", "rt-multi-thread"] }
